--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "@types/pdfmake": "^0.2.2",
     "svelte": "^3.54.0",
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
+    "pdfmake": "^0.2.7",
+    "pdfmake-unicode": "^0.0.1",
     "svelte-navigator": "^3.2.2"
   }
 }
