--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "pg": "^8.9.0"
     }
 }
