--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "dayjs": "^1.11.7",
     "pdfmake": "^0.2.7",
     "pdfmake-unicode": "^0.0.1",
